# consentchain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  CHANGELOG.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  GAP_ANALYSIS.md  IMPLEMENTATION_REPORT_ROUND2.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_INDEX.md  QUICKSTART.md  README.md  SECURITY.md  ULTIMATE_SUMMARY.md  alembic.ini  consentchain.postman_collection.json  deployment.json  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  repomix-output.xml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: ci-cd.yml  dependency-review.yml  security.yml
admin-portal/: package.json
api/: blockchain_queue.py  cache.py  database.py  dependencies.py  errors.py  features.py  main.py  schemas.py  services.py
api/ai_assistant/: __init__.py
api/analytics/: __init__.py
api/billing/: __init__.py
api/breach/: __init__.py
api/cache/: __init__.py
api/compliance/: gdpr.py
api/deletion/: __init__.py
consentchain_types/: __init__.py  enums.py  models.py  pyproject.toml
contracts/: DEPRECATED.md  __init__.py  audit_trail.py  client.py  consent_registry.py
contracts_v2/: __init__.py  audit_trail.py  consent_registry.py  constants.py
core/: constants.py  crypto.py  models.py
dashboard/: DEPRECATED.md  index.html
dashboard-v2/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DPDP_COMPLIANCE.md  GDPR_COMPLIANCE.md  USE_CASES.md
e2e/: README.md  package.json  playwright.config.ts
k8s/: canary-deployment.yaml  deployment.yaml  staging-deployment.yaml
monitoring/: prometheus.yml
scripts/: deploy.sh  deploy_contracts.py  seed_data.py  setup.sh  setup_github_secrets.sh
sdk/: client.py
sdk-async/: pyproject.toml
sdk-async/consentchain_async/: __init__.py  client.py  models.py
sdk-ts/: package.json
security/: README.md  hardening.sh  penetration_test.py  security-checklist.md
tests/: conftest.py  test_ai_assistant.py  test_analytics.py  test_api.py  test_architecture.py  test_audit_trail_v2.py  test_billing.py  test_blockchain.py  test_breach.py  test_contracts_v2.py  test_crypto.py  test_events.py  test_features.py  test_ipfs.py  test_middleware.py  test_mobile.py  test_mobile_fix.txt  test_notification_delivery.py  test_oauth.py  test_portability.py  test_sdk.py  test_tenant.py  test_webauthn.py  test_webhooks.py
(+111 files in other folders)
