[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consentchain-async"
version = "1.0.0"
description = "Async Python SDK for ConsentChain API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ConsentChain Team", email = "team@consentchain.io" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "consentchain-types>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/consentchain/sdk-python"
Documentation = "https://docs.consentchain.io"
Repository = "https://github.com/consentchain/sdk-python"
